# LP-Sonar

./: .gitignore  README.md  start.sh  stop.sh
backend/: .env.example  .gitignore  pyproject.toml  validate_backend.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: alerts.py  lp.py  lp_range.py  token_detail.py  tokens.py
backend/app/core/: config.py  redis_client.py
backend/app/models/: schemas.py
backend/app/services/: cex_price.py  dexscreener_client.py  execution_cost.py  fee_fetcher.py  focus_analyzer.py  history_sufficiency.py  holding_period.py  hot_monitor.py  il_risk.py  lp_decision_engine.py  lp_positions_service.py  market_quality.py  mcp_client.py  pair_ranker.py  range_backtester.py  range_generator.py  range_recommender.py  range_scenario.py  range_scorer.py  regime_detector.py  solana_dex_client.py  univ4_client.py  universe_scanner.py  validation_logger.py  wash_analysis_service.py
backend/app/tasks/: scheduler.py
backend/data/: calibration.json
backend/scripts/: ablation_comparison.py  analyze_validation.py  backfill_outcomes.py  calibrate.py
docs/: backend_validation_report.md  handoff_context_2026_03_27.md  implementation_status.md  lp_recommendation_engine_spec.md  phase2_planning.md  project-review.md  release_notes_phase_1_5.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AlertFeed.tsx  FocusPanel.tsx  HotTable.tsx  LPAnalysis.tsx  LPHolders.tsx  LPOpportunities.tsx  PriceChange.tsx  TokenCell.tsx  TokenDetailView.tsx  (+1 more)
(+2 files in other folders)
