[project]
name = "lp-sonar-backend"
version = "0.1.0"
description = "DeFi LP monitoring system backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "redis[hiredis]>=5.2.0",
    "apscheduler>=3.10.4",
    "pydantic-settings>=2.6.0",
    "numpy>=2.1.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
